--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#172F4A" />
     <meta name="description" content="Grow yourself and a bountiful garden by maintaining healthy habits." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-192x192.png" />
